# loz-lang

./: .gitattributes  .gitignore  Cargo.toml  README.md  RELEASE_NOTES.md
.github/workflows/: ci.yml
crates/loz_ast/: Cargo.toml
crates/loz_ast/src/: lib.rs
crates/loz_cli/: Cargo.toml
crates/loz_cli/src/: main.rs
crates/loz_codegen/: Cargo.toml
crates/loz_codegen/src/: lib.rs
crates/loz_codegen/src/interpreter/: environment.rs  execution_error.rs  interpreter.rs  mod.rs  runtime_value.rs
crates/loz_codegen/src/llvm/: codegen_error.rs  llvm_generator.rs  mod.rs
crates/loz_lexer/: Cargo.toml
crates/loz_optimizer/: Cargo.toml
crates/loz_optimizer/src/: lib.rs
crates/loz_parser/: Cargo.toml
crates/loz_runtime/: Cargo.toml
crates/loz_runtime/src/: lib.rs
crates/loz_semantic/: Cargo.toml
docs/: 00-overview.md  01-language-goals.md  02-v1-scope.md  03-syntax-preview.md  04-compiler-architecture.md  05-project-structure.md  06-roadmap.md  agent-system.md  async-await.md  cli.md  compiler-architecture.md  getting-started.md  json-schema.md  language-reference.md  language-syntax.md  limitations.md  llm-runtime.md  native-build.md  optimizer.md  package-system.md  project-config.md  project-structure.md  python-interop.md  release-plan.md  roadmap.md  runtime.md  tool-system.md  vision.md  vscode-extension.md  workflow-system.md
examples/: agent_support.loz  arithmetic.loz  async_task.loz  constant_eval.loz  functions.loz  hello.loz  if_else.loz  input.loz  json_schema.loz  llm_github.loz  llm_mock.loz  llm_ollama.loz  tool_basic.loz  variables.loz  while_loop.loz  workflow_onboarding.loz
examples/package_demo/: loz.toml
examples/project_config/: .env.example  loz.toml
examples/python_tool/: loz.toml  tools.py
runtime/: python_bridge.py
scripts/: test_native_examples.sh
vscode-loz/: .vscodeignore  LICENSE  README.md  language-configuration.json  package.json
vscode-loz/icons/: loz-icon-theme.json
vscode-loz/snippets/: loz.json
vscode-loz/src/: extension.js
(+7 files in other folders)
