[package]
name = "loz_cli"
version = "0.1.0-alpha"
edition = "2024"
license = "MIT"
repository = "https://github.com/Elnubi7/loz-lang.git"

[dependencies]
dotenvy = "0.15"
loz_ast = { path = "../loz_ast" }
loz_codegen = { path = "../loz_codegen" }
loz_lexer = { path = "../loz_lexer" }
loz_optimizer = { path = "../loz_optimizer" }
loz_parser = { path = "../loz_parser" }
loz_semantic = { path = "../loz_semantic" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[[bin]]
name = "loz"
path = "src/main.rs"
