[package]
name = "loz_codegen"
version = "0.1.0"
edition = "2024"

[dependencies]
inkwell = { version = "0.9.0", features = ["llvm18-1-prefer-dynamic"] }
loz_ast = { path = "../loz_ast" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1.0"

[dev-dependencies]
loz_lexer = { path = "../loz_lexer" }
loz_parser = { path = "../loz_parser" }
loz_semantic = { path = "../loz_semantic" }
