[package]
name = "loz_optimizer"
version = "0.1.0-alpha"
edition = "2024"
license = "MIT"
repository = "https://github.com/Elnubi7/loz-lang.git"

[dependencies]
loz_ast = { path = "../loz_ast" }

[dev-dependencies]
loz_codegen = { path = "../loz_codegen" }
loz_lexer = { path = "../loz_lexer" }
loz_parser = { path = "../loz_parser" }
loz_semantic = { path = "../loz_semantic" }
