[package]
name = "loz_runtime"
version = "0.1.0-alpha"
edition = "2024"
license = "MIT"
repository = "https://github.com/Elnubi7/loz-lang.git"

[lib]
crate-type = ["staticlib"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1.0"
